--- a/about.html
+++ b/about.html
@@ -19,23 +19,27 @@
     main { max-width:700px; margin:40px auto; padding:0 16px; }
     h1, h2, h3 { margin-bottom:16px; }
     section { background:#fff; border-radius:16px; box-shadow:0 2px 8px #0001; padding:20px; margin-bottom:32px; }
-    nav { background:#222; color:#fff; padding:10px 0; }
-    nav .menu, .menu-btn { display:none; }
-    nav ul { display:flex; justify-content:center; gap:14px; margin:0; padding:0;}
-    nav a { color:#fff; text-decoration:none; font-weight:bold; padding:8px 12px; border-radius:5px;}
-    nav a:hover, nav a.active { background:#4169e1; }
-    @media (max-width:700px) {
-      main { margin:15px auto; }
-      section { margin-bottom:18px; }
-    }
-    @media (max-width:600px) {
-      nav ul { display:none; }
-      nav .menu-btn { display:inline-block; background:none; border:none; font-size:2em; margin-left:10px;}
-      nav .menu.open { display:block; position:absolute; background:#222; width:100vw; top:48px; left:0; }
-      nav .menu ul { display:block; text-align:center; padding:0;}
-      nav .menu ul li { margin:18px 0; }
+    nav { background:#222; position:relative; }
+.menu-btn {
+  display:none; position:absolute; right:16px; top:12px; background:transparent; border:none; color:#fff; font-size:2em; z-index:20;
+}
+.nav-list { display:flex; justify-content:center; gap:14px; margin:0; padding:0; list-style:none; }
+nav a { color:#fff; text-decoration:none; font-weight:bold; padding:8px 12px; border-radius:5px; }
+nav a:hover, nav a.active { background:#4169e1; }
+@media (max-width:700px) {
+  .nav-list { gap:8px; }
+}
+@media (max-width:600px) {
+  .nav-list {
+    display:none; flex-direction:column; background:#222;
+    position:absolute; top:50px; left:0; right:0; z-index:10;
+  }
+  nav.open .nav-list { display:flex; }
+  .menu-btn { display:inline-block; }
+}
       header img { width:56px; }
     }
+
   </style>
 </head>
 <body>
@@ -44,25 +48,28 @@
     <h1>About THQ Cyber Division</h1>
   </header>
   <nav>
-    <button class="menu-btn" onclick="document.querySelector('.menu').classList.toggle('open')">&#9776;</button>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <div class="menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+  <button class="menu-btn" aria-label="Open menu" onclick="toggleMenu()">&#9776;</button>
+  <ul class="nav-list">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html" class="active">About</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
+<script>
+function toggleMenu(){
+  var nav = document.querySelector('nav');
+  nav.classList.toggle('open');
+}
+// Hide menu on resize up, show button only on mobile
+window.addEventListener('resize', function(){
+  if(window.innerWidth > 600){
+    document.querySelector('nav').classList.remove('open');
+  }
+});
+</script>
   <main>
     <section>
       <h2>Our Mission</h2>
