Add favicon and update footer links

--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,8 @@
     .share a{background:#eef4ff;color:var(--accent);padding:8px 10px;border-radius:8px;text-decoration:none;font-weight:600}
     footer{text-align:center;color:var(--muted);padding:22px 12px;margin-top:28px}
   </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ipfs.io/ipfs/Qma2qoAgFdPvqjH79ywqn4h4JevVYNEv4YyR8PBdgqWVUn">
+
 </head>
 <body>
   <header>
@@ -136,7 +138,12 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 THQ Cyber Division Unincorporated — Sectigo SSL provisioning and certificate lifecycle management available via our <a href="services.html">Services</a> page.</p>
+    <p style="margin:6px 0">&copy; 2024–2025 THQ Cyber Division Unincorporated</p>
+    <nav aria-label="footer links">
+      <a href="terms.html" style="text-decoration:none;color:#fff">Terms</a> |
+      <a href="privacy.html" style="text-decoration:none;color:#fff">Privacy</a> |
+      <a href="mailto:thqcs@protonmail.com" style="text-decoration:none;color:#fff">Contact</a>
+    </nav>
   </footer>
 </body>
 </html>
